#[options]
#package_dir =
#    ppgplot = src
#
#[options.packages.find]
#where = src
#
##[options.ext_modules.ppgplot]
###ppgplot._ppgplot =
###sources = src/_ppgplot.c
##define_macros = USE_NUMPY=1
##undef_macros = USE_NUMARRAY
#
#[build_ext]
## This section can be overridden by environment variables:
## PGPLOT_DIR - Path to PGPLOT/Giza installation
## SCIDIR - For MacOS X SCISOFT support
